<resources>

    <string name="app_name">Lunch List</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="empty">No restaurants!</string>

    <!-- Details Page -->
    <string name="name_label">Name:</string>
    <string name="address_label">Address:</string>
    <string name="type_label">Type:</string>
    <string name="take_out_label">Take-Out</string>
    <string name="sit_down_label">Sit-Down</string>
    <string name="delivery_label">Delivery</string>
    <string name="notes_label">Notes:</string>
    <string name="feed_label">Feed URL</string>
    <string name="location_label">Location:</string>
    <string name="location_not_set">(not set)</string>
    <string name="showMap">Show on Map</string>
    
    <!-- List Page -->
    <string name="icon_content_description">restaurant icon</string>
    <string name="empty_list_message">Click the MENU button to add a restaurant!</string>
    
    <!-- Alarm Page -->
    <string name="time_for_lunch">It\'s time for lunch!</string>
    
    <!-- Preferences -->
    <string name="sort_list_preference_title">Sort Order</string>
    <string name="sort_list_preference_summary">Choose the order the list uses</string>
    <string name="sort_list_preference_dialog_title">Choose a sort order</string>
    <string name="alarm">alarm</string>
    <string name="sound_alarm">Sound a Lunch Alarm</string>
    <string name="alarm_summary">Check if you want to know when it is time for lunch</string>
    <string name="alarm_time">alarm_time</string>
    <string name="lunch_alarm_time">Lunch Alarm Time</string>
    <string name="default_time">12:00</string>
    <string name="alarm_desired_time">Set your desired time for the lunch alarm</string>
    <string name="use_notification_key">use_notification</string>
    <string name="use_notification_title">Use a Notification</string>
    <string name="use_notification_summary">Check if you want a status bar icon at lunchtime, or uncheck for a full-screen notice</string>
    <string name="alarm_ringtone">alarm_ringtone</string>
    <string name="alarm_ringtone_title">Alarm Ringtone</string>
    <string name="alarm_ringtone_summary">Indicate the ringtone to play when it is lunchtime</string>
    
    <!-- Menu -->
    <string name="add_restaurant">Add</string>
    <string name="settings">Settings</string>
    <string name="rss_feed">RSS Feed</string>
    <string name="save_location">Save Location</string>
    <string name="help">Help</string>
</resources>